fixed taskbar spacing issue that created scroll

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
 
 .App {
   .content {
-    height: calc((var(--vh, 1vh) * 100) - $taskbar-height);
+    height: calc((var(--vh, 1vh) * 99.9) - $taskbar-height);
     display: flex;
     flex-flow: column wrap;
     align-content: flex-start;
